# SOMA-Core

./: .coveragerc  .gitignore  ADVERSARIAL_REPORT.md  CHANGELOG.md  CLAUDE.md  COMPARISON_REPORT.md  CONTRIBUTING.md  HYBRID_TONE_REPORT.md  INTEGRATION_REPORT.md  LICENSE  NERVOUS_SYSTEM_REPORT.md  PATTERN_TRIGGER_REPORT.md  PRODUCTION_PLAN.md  README.md  ROADMAP.md  SECURITY.md  SETUP_REPORT.md  STRESS_TEST_REPORT.md  SUBAGENT_REPORT.md  TODO.md  VERIFICATION_REPORT.md  ab_coverage_snapshot.json  demo.tape  demo_session.py  public_traces_report.json  pyproject.toml  soma.toml  validation_snapshot.json
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  layer_proposal.md
.github/scripts/: ab_coverage_gate.py
.github/workflows/: ci.yml  publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.5.0-REQUIREMENTS.md  v0.5.0-ROADMAP.md
.planning/phases/01-vitals-accuracy/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-RESEARCH.md  01-VALIDATION.md  1-CONTEXT.md
.planning/phases/02-uncertainty-classification/: 02-01-PLAN.md  02-02-PLAN.md
.planning/phases/09-async-streaming/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-VERIFICATION.md
.planning/phases/10-production-hardening/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md  10-VERIFICATION.md
.planning/phases/11-context-window-tracking/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-CONTEXT.md  11-RESEARCH.md  11-VALIDATION.md  11-VERIFICATION.md
.planning/phases/12-contributing-guide/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md  12-RESEARCH.md  12-VALIDATION.md  12-VERIFICATION.md
.planning/phases/13-config-validation/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md  13-CONTEXT.md  13-RESEARCH.md  13-VALIDATION.md  13-VERIFICATION.md
.planning/phases/14-core-reflexes/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-03-PLAN.md  14-03-SUMMARY.md  14-CONTEXT.md  14-RESEARCH.md  14-VALIDATION.md  14-VERIFICATION.md
.planning/phases/15-signal-reflexes/: 15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md  15-02-SUMMARY.md  15-CONTEXT.md  (+1 more)
.serena/: project.yml
docs/: AB-VERDICT.md  ARCHITECTURE.md  BENCHMARK.md  INTEGRATION-TEST-REPORT.md  LIVE-BENCHMARK.md  PAPER.md  PAPER_DRAFT.md  QUICKSTART.md  RESEARCH.md  STATUS-REPORT.md  TECHNICAL.md  api.md  claude-code-layer.md  external_validation_2026_04_30.md  guide.md  hooks.md  reference.md  research_plan_2026_05.md
docs/plans/: 2026-03-29-claude-code-plugin.md
docs/specs/: 2026-03-28-soma-cli-design.md  2026-03-30-cli-cleanup.md  2026-03-30-core-hardening-plan.md  2026-03-30-core-polish-plan.md  2026-03-30-extract-to-core-plan.md  2026-03-30-feedback-driven-plan.md  2026-03-30-guidance-plan.md  2026-03-30-guidance-redesign.md  2026-03-30-next-improvements.md  2026-04-03-dashboard-v2-design.md  2026-04-03-dashboard-v2-plan.md  2026-04-03-dashboard-v2-visual-design.md
examples/: autogen_example.py  claude_layer_test.py  crewai_example.py  custom_agent_example.py  langchain_example.py  live_dashboard.py  paperclip_demo.py  paperclip_session.json  real_dashboard.py
experiments/: analyze_mirror_test.py  mirror_test_setup.py  mirror_test_task.md  run_mirror_test.sh
hooks/: hooks.json  run-hook.sh
policies/: cost-guard.yaml  strict.yaml
scripts/: core_integration_run.py
skills/soma-config/: SKILL.md
skills/soma-control/: SKILL.md
skills/soma-help/: SKILL.md
skills/soma-status/: SKILL.md
src/soma/: __init__.py  ab_control.py  advanced_signal_reflexes.py  analytics.py  audit.py  baseline.py  blocks.py  budget.py  calibration.py  commands.py  context.py  context_control.py  contextual_guidance.py  cross_session.py  daemon.py  engine.py  errors.py  events.py  findings.py  fingerprint.py  graph.py  graph_reflexes.py  guidance.py  guidance_state.py  halflife.py  healing_validation.py  inbox.py  ladder.py  learning.py  lessons.py  mirror.py  models.py  patterns.py  persistence.py  phase_drift.py  planner.py  policy.py  predictor.py  pressure.py  proxy.py  (+21 more)
tests/: conftest.py  dashboard_deepdive_audit.mjs  dashboard_e2e.mjs  dashboard_tabs_audit.mjs  test_ab_control.py  test_ab_counters_atomic.py  test_ab_coverage_gate.py  test_ab_outcomes_single_writer.py  test_advanced_reflex_hooks.py  test_advanced_signal_reflexes.py  test_agent_config_frozen.py  test_agent_family_routing.py  test_analytics.py  test_analytics_pragmas.py  test_api.py  test_audit.py  test_audit_regressions.py  test_audit_retention.py  test_baseline.py  test_benchmark.py  test_benchmark_report.py  test_benchmark_stats.py  test_blocks.py  test_budget.py  test_calibration.py  test_calibration_family_normalize.py  test_calibration_gate.py  test_calibration_schema_migration.py  test_calibration_silence.py  test_calibration_thresholds.py  test_circuit_gc.py  test_circuit_locking.py  test_claude_code_layer.py  test_cli.py  test_cli_mode_command.py  test_common_guidance_state.py  test_config.py  test_config_module.py  test_context.py  test_context_control.py  (+98 more)
tools/: phantom_full.py  phantom_smoke.py  replay_traces.py
(+127 files in other folders)
