[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soma-ai"
version = "0.4.8"
description = "Behavioral monitoring and directive control for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Tim Hunt", email = "tr00x@proton.me" }]
keywords = ["ai", "agents", "monitoring", "observability", "behavioral"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tomli-w>=1.0",
    "rich>=13.0",
    "textual>=3.0",
]

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]
all = ["soma-ai[otel,dev]"]

[project.scripts]
soma = "soma.cli.main:main"
soma-hook = "soma.hooks.claude_code:main"
soma-statusline = "soma.hooks.statusline:main"

[project.urls]
Homepage = "https://github.com/tr00x/SOMA-Core"
Repository = "https://github.com/tr00x/SOMA-Core"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811", "F841", "E402"]  # test files have relaxed lint rules
"src/soma/cli/hub.py" = ["F401"]
"src/soma/cli/tabs/**" = ["F401", "F541", "F841"]

[tool.hatch.build.targets.wheel]
packages = ["src/soma"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "soma/_skills"
