[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soma-ai"
version = "2026.4.30"
description = "Behavioral monitoring and directive control for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Tim Hunt", email = "tr00x@proton.me" }]
keywords = ["ai", "agents", "monitoring", "observability", "behavioral"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tomli-w>=1.0",
    "rich>=13.0",
    "textual>=3.0",
    "google-genai>=1.73.1",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp-proto-grpc>=1.20"]
dev = ["pytest>=8.0", "pytest-cov", "pytest-asyncio>=0.21", "ruff", "pyyaml>=6.0"]
all = ["soma-ai[otel,dev]"]

[project.scripts]
soma = "soma.cli.main:main"
soma-hook = "soma.hooks.claude_code:main"
soma-statusline = "soma.hooks.statusline:main"
soma-dashboard = "soma.dashboard.server:main"

[project.urls]
Homepage = "https://github.com/tr00x/SOMA-Core"
Repository = "https://github.com/tr00x/SOMA-Core"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811", "F841", "E402"]  # test files have relaxed lint rules
"src/soma/cli/hub.py" = ["F401"]
"src/soma/cli/tabs/**" = ["F401", "F541", "F841"]
"src/soma/hooks/common.py" = ["F821"]

[tool.hatch.build.targets.wheel]
packages = ["src/soma"]

# Note: skills/ directory was removed in commit 804b365
# (deprecated slash-command bundle). _install_skills in
# cli/setup_claude.py returns False gracefully when no source exists,
# so the build doesn't need a force-include mapping anymore.

[tool.hatch.build.targets.sdist]
include = [
    "src/soma",
    "tests",
    "LICENSE",
    "pyproject.toml",
]


[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest-asyncio>=0.23",
]
